--- a/bindgen/CMakeLists.j2
+++ b/bindgen/CMakeLists.j2
@@ -33,6 +33,7 @@ set_target_properties( {{ name }}
 
 if(WIN32)
   target_compile_options( OCP PRIVATE /bigobj )
+  target_compile_definitions( OCP PRIVATE Standard_EXPORT Standard_IMPORT )
   target_link_libraries( OCP PRIVATE opengl32 )
 else()
   set_target_properties( OCP
