Correct handling of byref smart_ptr args

--- a/bindgen/macros.j2
+++ b/bindgen/macros.j2
@@ -33,11 +33,11 @@
 {%- endmacro -%}
 
 {%- macro argtypes_names_not_byref(f) -%}
-    {% for arg,t,_ in f.args if not is_byref(t) %}{{ t }} {{ arg }}{{ "," if not loop.last }}{% endfor %}
+    {% for arg,t,_ in f.args if not is_byref(t) %}{{ t[:-1] if is_byref_smart_ptr(t) else t }} {{ arg }}{{ "," if not loop.last }}{% endfor %}
 {%- endmacro -%}
 
 {%- macro init_outputs_byref(f) -%}
-    {% for arg,t,_ in f.args if is_byref(t) %}{{ t[:-1] }} {{ arg }}{{ "; " if not loop.last }}{% endfor %}
+    {% for arg,t,_ in f.args if is_byref(t) %}{{ t[:-1] }} {{ arg }};{% endfor %}
 {%- endmacro -%}
 
 {%- macro argnames_wo_type(f) -%}
