--- a/bindgen/template_sub.j2
+++ b/bindgen/template_sub.j2
@@ -118,7 +118,9 @@ py::module m = static_cast<py::module>(main_module.attr("{{module.name}}"));
     {% for m in c.static_methods_byref %}
     {% if not m.pointer_by_ref %}
         .def_static("{{m.name}}_s",
-                    []( {{argtypes_names_not_byref(m)}} ){ {{init_outputs_byref(m)}}; {{c.name}}::{{m.name}}({{argnames_wo_type(m)}}); return std::make_tuple({{argnames_byref(m)}}); },
+                    []({{argtypes_names_not_byref(m)}} ){ {{init_outputs_byref(m)}}
+                        {{c.name}}::{{m.name}}({{argnames_wo_type(m)}});
+                        {% if args_byref(m) %}return std::make_tuple({{argnames_byref(m)}});{% endif %} },
                     R"#({{m.comment}})#" {{argnames_not_byref(m)}})
     {% endif %}
     {% endfor %}
