--- a/bindgen/macros.j2
+++ b/bindgen/macros.j2
@@ -33,15 +33,19 @@
 {%- endmacro -%}
 
 {%- macro argtypes_names_not_byref(f) -%}
-    {% for arg,t,_ in f.args if not is_byref(t) %}{{ t[:-1] if is_byref_smart_ptr(t) else t }} {{ arg }}{{ "," if not loop.last }}{% endfor %}
+    {% for arg,t,_ in f.args if not is_byref(t) %}{{ t.replace('opencascade::handle<','')[:-3]+'&' if is_byref_smart_ptr(t) else t }} {{ arg }}{{ "," if not loop.last }}{% endfor %}
 {%- endmacro -%}
 
 {%- macro init_outputs_byref(f) -%}
-    {% for arg,t,_ in f.args if is_byref(t) %}{{ t[:-1] }} {{ arg }};{% endfor %}
+    {% for arg,t,_ in f.args if is_byref(t) %}{{ t[:-1] }} {{ arg }};
+    {% endfor %}
+    {% for arg,t,_ in f.args if is_byref_smart_ptr(t) -%}
+    {{ t[:-1] }} {{ arg }}_ptr; {{ arg }}_ptr = &{{arg}};
+    {% endfor %}
 {%- endmacro -%}
 
 {%- macro argnames_wo_type(f) -%}
-    {% for arg,t,_ in f.args %}{{ arg }}{{ "," if not loop.last }}{% endfor %}
+    {% for arg,t,_ in f.args %}{% if is_byref_smart_ptr(t) %}{{ arg }}_ptr{% else %}{{ arg }}{% endif %}{{ "," if not loop.last }}{% endfor %}
 {%- endmacro -%}
 
 {%- macro argnames_byref(f) -%}
@@ -54,6 +58,12 @@
 
 {%- macro argnames_not_byref(f) -%}
     {% for arg,t,d in f.args if not is_byref(t) %} {{ "," if loop.first }} py::arg("{{arg}}"){% if d %}=static_cast<{{t}}>({{d}}){% endif %}{{ "," if not loop.last }}{% endfor %}
+{%- endmacro -%}
+
+{%- macro handle_results_ptr_byref(f) -%}
+    {% for arg,t,_ in f.args if is_byref_smart_ptr(t) -%}
+    if ( {{ arg }}_ptr.get() != &{{arg}} ) {{arg}} = *{{ arg }}_ptr;
+    {% endfor -%}
 {%- endmacro -%}
 
 {%- macro method_pointer(cls,f) -%}
