--- a/bindgen/CMakeLists.j2
+++ b/bindgen/CMakeLists.j2
@@ -41,7 +41,7 @@ if(WIN32)
   target_compile_definitions( OCP PRIVATE 
                               "Standard_EXPORT="
                               "Standard_EXPORTEXTERN="
-                              "Standard_EXPORTEXTERNC="
+                              "Standard_EXPORTEXTERNC=extern \"C\""
                               "Standard_IMPORT=extern"
                               "Standard_IMPORTC=extern \"C\""
                               "_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING")
