--- a/bindgen/CMakeLists.j2
+++ b/bindgen/CMakeLists.j2
@@ -28,7 +28,7 @@ file( GLOB CPP_FILES ${PROJECT_SOURCE_DIR}/*.cpp )
 
 add_library( {{ name }} MODULE ${CPP_FILES} )
 
-target_link_libraries( {{ name }} PRIVATE OPENCASCADE ${PYTHON_LIBRARY} pybind11::pybind11 )
+target_link_libraries( {{ name }} PRIVATE OPENCASCADE pybind11::pybind11 )
 set_target_properties( {{ name }}
                        PROPERTIES
                        CXX_STANDARD 17
@@ -37,22 +37,23 @@ set_target_properties( {{ name }}
                        SUFFIX "${PYTHON_MODULE_EXTENSION}" )
 
 if(WIN32)
-  target_compile_options( OCP PRIVATE /bigobj )
-  target_compile_definitions( OCP PRIVATE 
+  target_compile_options( {{ name }} PRIVATE /bigobj )
+  target_compile_definitions( {{ name }} PRIVATE 
                               "Standard_EXPORT="
                               "Standard_EXPORTEXTERN="
                               "Standard_EXPORTEXTERNC=extern \"C\""
                               "Standard_IMPORT=extern"
                               "Standard_IMPORTC=extern \"C\""
                               "_SILENCE_CXX17_ITERATOR_BASE_CLASS_DEPRECATION_WARNING")
-  target_link_libraries( OCP PRIVATE opengl32 )
+  target_link_libraries( {{ name }} PRIVATE opengl32 )
+  target_link_libraries( {{ name }} PRIVATE ${PYTHON_LIBRARY} )
 else()
-  set_target_properties( OCP
+  set_target_properties( {{ name }}
                          PROPERTIES
                          CMAKE_CXX_FLAGS_RELEASE "-O3 "
                          COMPILE_FLAGS "-fpermissive -fvisibility=hidden -fvisibility-inlines-hidden" )
 endif()
 
 if(APPLE)
-  #target_link_libraries( OCP PRIVATE "-undefined warning" )
+  target_link_libraries( {{ name }} PRIVATE "-undefined dynamic_lookup")
 endif()
