--- a/bindgen/CMakeLists.j2
+++ b/bindgen/CMakeLists.j2
@@ -48,6 +48,7 @@ if(WIN32)
   target_link_libraries( {{ name }} PRIVATE opengl32 )
   target_link_libraries( {{ name }} PRIVATE ${PYTHON_LIBRARY} )
 else()
+  target_link_options( {{ name }} PRIVATE "LINKER:--allow-multiple-definition")
   set_target_properties( {{ name }}
                          PROPERTIES
                          CMAKE_CXX_FLAGS_RELEASE "-O3 "
