Restructured templates template

--- a/bindgen/template_templates.j2
+++ b/bindgen/template_templates.j2
@@ -28,9 +28,7 @@ namespace py = pybind11;
 {% endif %}
 
 // Class template handling functions
-{% for h in module.headers %}
-// {{h.name}}
-{% for n,t in h.class_templates.items() if n in module.class_template_dict %}
+{% for t in module.class_templates %}
 
 template {{template_args_typename(t)}}
 void preregister_template_{{t.name}}(py::object &m, const char *name){
@@ -71,7 +69,7 @@ void register_template_{{t.name}}(py::object &m, const char *name){
     ;
 };
 {% endfor %}
-{% endfor %}
+
 
 // user-defined post
 {% if include_post %}
