Wrap nested enums

--- a/bindgen/template_sub.j2
+++ b/bindgen/template_sub.j2
@@ -58,7 +58,7 @@ void register_{{module.name}}(py::module &main_module) {
 
 
 py::module m = static_cast<py::module>(main_module.attr("{{module.name}}"));
-
+py::object klass;
 
 //Python trampoline classes
 {% for c in module.classes %}{% if c.abstract %}
@@ -73,7 +73,23 @@ py::module m = static_cast<py::module>(main_module.attr("{{module.name}}"));
     register_default_constructor<{{c.name}} {{pointer(c)}}>(m,"{{cls_name(c)}}");
     {% endif %}
 
-    static_cast<py::class_<{{c.name}} {{pointer(c)}} {% if c.abstract %},Py_{{c.name}}{% endif %} {{super(c,class_dict,module.typedef_dict)}}>>(m.attr("{{cls_name(c)}}"))
+    klass = m.attr("{{cls_name(c)}}");
+    
+    // nested enums
+    {% for enum in c.enums %}
+    {% if enum.anonymous %}
+        {% for val in enum.values %}
+        m.attr("{{ val }}") = py::cast(int({{ enum.name+"::" if enum.name}}{{ val }}));
+        {% endfor %}
+    {% else %}
+        py::enum_<{{enum.name}}>(m, "{{enum.name}}",R"#({{enum.comment}})#")
+        {% for val in enum.values %}
+            .value("{{val}}",{{enum.name}}::{{val}}){{ ".export_values();" if loop.last }}
+        {% endfor %}
+    {% endif %}
+    {% endfor %}
+
+    static_cast<py::class_<{{c.name}} {{pointer(c)}} {% if c.abstract %},Py_{{c.name}}{% endif %} {{super(c,class_dict,module.typedef_dict)}}>>(klass)
     // constructors
     {% for i,con in enumerate(c.constructors) %}
     {% if (not con.pointer_by_ref) and
