--- a/bindgen/template_sub_pre.j2
+++ b/bindgen/template_sub_pre.j2
@@ -70,7 +70,7 @@ py::module m = main_module.def_submodule("{{module.name}}", R"#({{module.doc}})#
 {% for enum in module.enums %}
 {% if enum.anonymous %}
     {% for val in enum.values %}
-    m.attr("{{ val }}") = py::cast(int({{ val }}));
+    m.attr("{{ val }}") = py::cast(int({{ enum.name+"::" if enum.name}}{{ val }}));
     {% endfor %}
 {% else %}
     py::enum_<{{enum.name}}>(m, "{{enum.name}}",R"#({{enum.comment}})#")
