Fix something that jinja2>=3 made an error
In jinja2==2.* `super in typedefs` used to evaluate to false if the
third argument to the macro (typedefs) wasn’t passed.

In jinja2==3.*, this becomes an error instead (which seems right and
proper to me). The easiest solution is to explicitly show that typedefs
is optional by specifying a default value.

--- a/bindgen/macros.j2
+++ b/bindgen/macros.j2
@@ -12,7 +12,7 @@
     {%- endif -%}
 {%- endmacro -%}
 
-{%- macro super(cls,classes,typedefs) -%}
+{%- macro super(cls,classes,typedefs=[]) -%}
     {% for super in cls.superclass if super in classes or super in typedefs %}, {{super}} {% endfor %}
 {%- endmacro -%}
 
